--- a/Autoexec.cfg
+++ b/Autoexec.cfg
@@ -112,7 +112,7 @@ alias afkOFF "echo AFK Disable; -forward; -moveleft; -left;"
 // alias -shiftloud "-speed; volume .02; voice_enable 1; cl_mute_enemy_team 0"
 // bind shift +shiftloud
 
-bind "mouse4" ""
+bind "mouse4" "sm_r"
 bind "mouse5" "+voicerecord"
 bind "c" +left
 bind "t" "+lookatweapon"
